--- a/ppdb-saas-frontend/package.json
+++ b/ppdb-saas-frontend/package.json
@@ -45,5 +45,8 @@
     "typescript-eslint": "^8.50.1",
     "vite": "^7.2.6",
     "vitest": "^4.0.16"
+  },
+  "dependencies": {
+    "clerk-sveltekit": "^0.4.2"
   }
 }
