feat(epic-2): complete Epic 2 - school admission configuration
- Story 2.1: School Profile & Branding Configuration
- Story 2.2: Admission Path & Quota Management
- Story 2.3: Fee Structure & Payment Timing
- Story 2.4: School Admin RBAC Assignment

Features:
- Database schemas with RLS policies for tenant isolation
- Domain logic with comprehensive business rules
- Zod validation schemas
- Admin UI for managing profiles, paths, fees, and admins
- RBAC hierarchy (Super Admin, School Admin, Verifier, Treasurer)
- TDD approach with 69 unit tests passing

--- a/ppdb/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/ppdb/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -49,11 +49,11 @@ development_status:
   epic-1-retrospective: optional
 
   # Epic 2: School Admission Configuration
-  epic-2: in-progress
+  epic-2: done
   2-1-school-profile-branding-configuration: done
   2-2-admission-path-quota-management: done
-  2-3-fee-structure-payment-timing: backlog
-  2-4-school-admin-rbac-assignment: backlog
+  2-3-fee-structure-payment-timing: done
+  2-4-school-admin-rbac-assignment: done
   epic-2-retrospective: optional
 
   # Epic 3: Frictionless Registration & Data Collection
