--- a/ppdb/package.json
+++ b/ppdb/package.json
@@ -50,6 +50,8 @@
 		"@lucia-auth/adapter-drizzle": "^1.1.0",
 		"@neondatabase/serverless": "^1.0.2",
 		"drizzle-orm": "^0.45.1",
+		"firebase": "^12.7.0",
+		"firebase-admin": "^13.6.0",
 		"lucia": "^3.2.2",
 		"zod": "^4.3.5"
 	}
