--- a/ppdb/package.json
+++ b/ppdb/package.json
@@ -25,6 +25,8 @@
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/postcss": "^4.1.18",
+		"@testing-library/svelte": "^5.3.1",
+		"@types/jsdom": "^27",
 		"@types/node": "^24",
 		"autoprefixer": "^10.4.23",
 		"bits-ui": "^2.15.2",
@@ -34,6 +36,7 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.13.1",
 		"globals": "^16.5.0",
+		"jsdom": "^27.4.0",
 		"postcss": "^8.5.6",
 		"prettier": "^3.7.4",
 		"prettier-plugin-svelte": "^3.4.0",
@@ -44,7 +47,8 @@
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.48.1",
 		"vite": "^7.2.6",
-		"vitest": "^4.0.16"
+		"vitest": "^4.0.16",
+		"wrangler": "^4.58.0"
 	},
 	"dependencies": {
 		"@lucia-auth/adapter-drizzle": "^1.1.0",
