feat: setup integration testing infrastructure (Epic 2.7)

--- a/ppdb/package.json
+++ b/ppdb/package.json
@@ -13,6 +13,7 @@
 		"lint": "eslint . && prettier --check .",
 		"format": "prettier --write .",
 		"test:unit": "vitest",
+		"test:integration": "vitest tests/integration --run",
 		"test:e2e": "playwright test",
 		"test": "npm run test:unit && npm run test:e2e"
 	},
@@ -25,9 +26,11 @@
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/postcss": "^4.1.18",
+		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/svelte": "^5.3.1",
 		"@types/jsdom": "^27",
 		"@types/node": "^24",
+		"@types/pg": "^8.16.0",
 		"autoprefixer": "^10.4.23",
 		"bits-ui": "^2.15.2",
 		"clsx": "^2.1.1",
@@ -37,6 +40,7 @@
 		"eslint-plugin-svelte": "^3.13.1",
 		"globals": "^16.5.0",
 		"jsdom": "^27.4.0",
+		"pg": "^8.16.3",
 		"postcss": "^8.5.6",
 		"prettier": "^3.7.4",
 		"prettier-plugin-svelte": "^3.4.0",
