--- a/ppdb/.github/workflows/ci.yml
+++ b/ppdb/.github/workflows/ci.yml
@@ -19,4 +19,12 @@ jobs:
       - run: npm run check
       - run: npm run lint
       - run: npm run test
+        env:
+          DATABASE_URL: ${{ secrets.NEON_TEST_DATABASE_URL }}
+      - run: npx drizzle-kit migrate
+        env:
+          DATABASE_URL: ${{ secrets.NEON_TEST_DATABASE_URL }}
+      - run: npm run test:integration
+        env:
+          DATABASE_URL: ${{ secrets.NEON_TEST_DATABASE_URL }}
       - run: npm run build
