--- a/ppdb/_bmad-output/sprint-status.yaml
+++ b/ppdb/_bmad-output/sprint-status.yaml
@@ -1,5 +1,5 @@
 # Sprint Status Dashboard
-# Generated: 2026-01-10
+# Generated: 2026-01-11
 
 epics:
   - id: 'epic-1'
@@ -67,7 +67,8 @@ epics:
         estimated_time: '1-2 days'
       - id: '2.5.3'
         name: 'Update All Permission Checking Helpers'
-        status: 'ready-for-dev'
+        status: 'done'
+        completed_at: '2026-01-11'
         owner: 'Elena'
         estimated_time: '1 day'
       - id: '2.5.4'
@@ -114,7 +115,8 @@ epics:
 
   - id: 'epic-2.7'
     name: 'Testing Infrastructure - Integration & E2E'
-    status: 'planned'
+    status: 'completed'
+    completed_at: '2026-01-10'
     priority: 'critical'
     is_blocker_for: ['production-deployment']
     depends_on: ['epic-2.5', 'epic-2.6']
@@ -123,22 +125,26 @@ epics:
     stories:
       - id: '2.7.1'
         name: 'Setup Neon Test Database with Auth'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-10'
         owner: 'Dana'
         estimated_time: '2 days'
       - id: '2.7.2'
         name: 'Implement RLS Integration Tests'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-10'
         owner: 'Dana'
         estimated_time: '2 days'
       - id: '2.7.3'
         name: 'Add E2E Tests to CI Pipeline (PR Trigger)'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-10'
         owner: 'Charlie'
         estimated_time: '2 days'
       - id: '2.7.4'
         name: 'Setup Test Data Fixtures for Auth'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-10'
         owner: 'Elena'
         estimated_time: '1 day'
 
@@ -230,13 +236,15 @@ epics:
 
 # Test Coverage Summary
 test_summary:
-  total_tests: 173
-  passing: 136
-  failing: 34
-  skipped: 3
+  total_tests: 231
+  passing: 231
+  failing: 0
+  skipped: 0
   coverage_by_epic:
     epic-1: 16 tests
     epic-2: 157 tests
+    epic-2.5: 67 tests (RBAC + auth)
+    epic-2.7: 13 tests (integration)
 
 # Known Issues
 known_issues:
@@ -250,9 +258,10 @@ known_issues:
   - id: 'RLS-TEST-001'
     description: '3 RLS tests skipped - need test database with RLS policies'
     severity: 'medium'
-    status: 'open'
+    status: 'resolved'
+    resolved_at: '2026-01-10'
     epic: 'epic-1'
-    fix_prerequisites: 'Neon test database setup, CI integration'
+    resolution: 'Epic 2.7 completed - integration tests with real DB now passing'
 
 # Epic 2 Retrospective Status
 retrospectives:
