--- a/ppdb/package.json
+++ b/ppdb/package.json
@@ -28,6 +28,7 @@
 		"@tailwindcss/postcss": "^4.1.18",
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/svelte": "^5.3.1",
+		"@testing-library/user-event": "^14.6.1",
 		"@types/jsdom": "^27",
 		"@types/node": "^24",
 		"@types/pg": "^8.16.0",
