chore: update sprint status - epic 2.6 completed

--- a/ppdb/_bmad-output/sprint-status.yaml
+++ b/ppdb/_bmad-output/sprint-status.yaml
@@ -84,7 +84,8 @@ epics:
 
   - id: 'epic-2.6'
     name: 'Component Library - Shared UI Components'
-    status: 'in_progress'
+    status: 'completed'
+    completed_at: '2026-01-11'
     priority: 'high'
     is_blocker_for: []
     depends_on: ['epic-2.5']
@@ -99,17 +100,20 @@ epics:
         estimated_time: '2 days'
       - id: '2.6.2'
         name: 'Build Reusable Modal/Dialog Components'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-11'
         owner: 'Elena'
         estimated_time: '2 days'
       - id: '2.6.3'
         name: 'Create Status Badge Component Library'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-11'
         owner: 'Elena'
         estimated_time: '1 day'
       - id: '2.6.4'
         name: 'Document Component Usage Patterns'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-11'
         owner: 'Charlie'
         estimated_time: '1 day'
 
@@ -236,15 +240,16 @@ epics:
 
 # Test Coverage Summary
 test_summary:
-  total_tests: 231
-  passing: 231
+  total_tests: 257
+  passing: 257
   failing: 0
   skipped: 0
   coverage_by_epic:
-    epic-1: 16 tests
-    epic-2: 157 tests
-    epic-2.5: 67 tests (RBAC + auth)
-    epic-2.7: 13 tests (integration)
+    epic-1: '16 tests'
+    epic-2: '157 tests'
+    epic-2.5: '67 tests (RBAC + auth)'
+    epic-2.6: '26 tests (Modal + Dialog + Badge)'
+    epic-2.7: '13 tests (integration)'
 
 # Known Issues
 known_issues:
