--- a/ppdb/package.json
+++ b/ppdb/package.json
@@ -29,6 +29,7 @@
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/svelte": "^5.3.1",
 		"@testing-library/user-event": "^14.6.1",
+		"@types/dompurify": "^3.0.5",
 		"@types/jsdom": "^27",
 		"@types/node": "^24",
 		"@types/pg": "^8.16.0",
@@ -58,10 +59,13 @@
 	"dependencies": {
 		"@lucia-auth/adapter-drizzle": "^1.1.0",
 		"@neondatabase/serverless": "^1.0.2",
+		"dompurify": "^3.3.1",
 		"drizzle-orm": "^0.45.1",
 		"firebase": "^12.7.0",
 		"firebase-admin": "^13.6.0",
 		"lucia": "^3.2.2",
+		"lucide-svelte": "^0.562.0",
+		"svelte-dnd-action": "^0.9.69",
 		"zod": "^4.3.5"
 	}
 }
