--- a/ppdb/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/ppdb/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -57,9 +57,9 @@ development_status:
   epic-2-retrospective: optional
 
   # Epic 3: Frictionless Registration & Data Collection
-  epic-3: backlog
-  3-1-public-landing-draft-initiation: backlog
-  3-2-multi-step-form-wizard-with-auto-save: backlog
+  epic-3: in-progress
+  3-1-public-landing-draft-initiation: done
+  3-2-multi-step-form-wizard-with-auto-save: in-progress
   3-3-document-upload-with-camera-guide: backlog
   3-4-finalization-via-whatsapp-otp-account-creation: backlog
   3-5-multi-child-registration-support: backlog
