--- a/ppdb/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/ppdb/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -59,8 +59,8 @@ development_status:
   # Epic 3: Frictionless Registration & Data Collection
   epic-3: in-progress
   3-1-public-landing-draft-initiation: done
-  3-2-multi-step-form-wizard-with-auto-save: in-progress
-  3-3-document-upload-with-camera-guide: backlog
+  3-2-multi-step-form-wizard-with-auto-save: done
+  3-3-document-upload-with-camera-guide: done
   3-4-finalization-via-whatsapp-otp-account-creation: backlog
   3-5-multi-child-registration-support: backlog
   epic-3-retrospective: optional
