feat(epic-3.4): implement WhatsApp OTP verification and auto account creation
- Create OTPInput component with 6-digit auto-focus
- Integrate WAHA API for sending OTP to WhatsApp
- Update step-4 to finalization page with OTP flow
- Add sendOTP and submitApplication with verifyOTP actions
- Auto-create persistent user account upon successful OTP verification
- Create Grand Reveal success page with application number
- Implement 30-day session creation after verification
- Add countdown timer for resend OTP
- Support draft-to-submitted status conversion

--- a/ppdb/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/ppdb/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -61,7 +61,7 @@ development_status:
   3-1-public-landing-draft-initiation: done
   3-2-multi-step-form-wizard-with-auto-save: done
   3-3-document-upload-with-camera-guide: done
-  3-4-finalization-via-whatsapp-otp-account-creation: backlog
+  3-4-finalization-via-whatsapp-otp-account-creation: done
   3-5-multi-child-registration-support: backlog
   epic-3-retrospective: optional
 
