--- a/ppdb/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/ppdb/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -57,12 +57,12 @@ development_status:
   epic-2-retrospective: optional
 
   # Epic 3: Frictionless Registration & Data Collection
-  epic-3: in-progress
+  epic-3: done
   3-1-public-landing-draft-initiation: done
   3-2-multi-step-form-wizard-with-auto-save: done
   3-3-document-upload-with-camera-guide: done
   3-4-finalization-via-whatsapp-otp-account-creation: done
-  3-5-multi-child-registration-support: backlog
+  3-5-multi-child-registration-support: done
   epic-3-retrospective: optional
 
   # Epic 4: Verification, Selection & Ranking Engine
