feat(epic-4.1): add documentReviews schema for verification tracking
- Add verificationActionEnum (approve/reject/request_revision)
- Add documentReviews table to track document verification history
- Links to applicationDocuments, tenants, and users (reviewer)
- Update sprint-status.yaml: Epic 3 completed, Epic 4 in progress

Story: 4.1.1 - Database schema foundation
Epic: 4 - Verification, Selection & Ranking Engine

--- a/ppdb/_bmad-output/sprint-status.yaml
+++ b/ppdb/_bmad-output/sprint-status.yaml
@@ -158,7 +158,8 @@ epics:
 
   - id: 'epic-3'
     name: 'Frictionless Registration & Data Collection'
-    status: 'in_progress'
+    status: 'completed'
+    completed_at: '2026-01-12'
     priority: 'high'
     is_blocker_for: []
     depends_on: ['epic-2.5']
@@ -171,16 +172,24 @@ epics:
         owner: 'Elena'
       - id: '3-2'
         name: 'Multi-Step Form Wizard with Auto-Save'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-12'
+        owner: 'Elena'
       - id: '3-3'
         name: 'Document Upload with Camera Guide'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-12'
+        owner: 'Elena'
       - id: '3-4'
         name: 'Finalization via WhatsApp OTP'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-12'
+        owner: 'Elena'
       - id: '3-5'
         name: 'Multi-Child Registration Support'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-12'
+        owner: 'Elena'
 
   - id: 'epic-4'
     name: 'Verification, Selection & Ranking Engine'
