chore: update sprint status - Epic 4.1 completed
Epic 4: Verification, Selection & Ranking Engine
- Status: planned → in_progress
- Story 4-1: Side-by-Side Verification Interface → DONE (2026-01-12)

Commits:
- b779a66: Schema (documentReviews)
- 74824e3: Dashboard (verification list)
- 96c9eeb: Viewer (side-by-side UI)
- 5a96dd8: API (verify endpoints + audit)
- 79e14e9: Tests (integration coverage)

Next: Stories 4-2, 4-3, 4-4 (pending)

--- a/ppdb/_bmad-output/sprint-status.yaml
+++ b/ppdb/_bmad-output/sprint-status.yaml
@@ -193,11 +193,15 @@ epics:
 
   - id: 'epic-4'
     name: 'Verification, Selection & Ranking Engine'
-    status: 'planned'
+    status: 'in_progress'
+    priority: 'high'
+    planned_start: '2026-01-12'
     stories:
       - id: '4-1'
         name: 'Side-by-Side Verification Interface'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-12'
+        owner: 'Elena'
       - id: '4-2'
         name: 'Scoring & Interview Input'
         status: 'pending'
