chore: update sprint status - Epic 4.2 completed
Epic 4: Verification, Selection & Ranking Engine
- Story 4-2: Scoring & Interview Input → DONE (2026-01-13)

Implementation summary:
- 14 tasks completed
- Database schema + migrations
- 3 API endpoints (create, finalize, unlock)
- 2 UI routes (dashboard + detail)
- 2 reusable components
- Integration tests
- Manual test guide

--- a/ppdb/_bmad-output/sprint-status.yaml
+++ b/ppdb/_bmad-output/sprint-status.yaml
@@ -204,7 +204,9 @@ epics:
         owner: 'Elena'
       - id: '4-2'
         name: 'Scoring & Interview Input'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-13'
+        owner: 'Elena'
       - id: '4-3'
         name: 'Automated Ranking Engine'
         status: 'pending'
