--- a/ppdb/package.json
+++ b/ppdb/package.json
@@ -17,11 +17,13 @@
 		"test:e2e": "playwright test",
 		"test": "npm run test:unit && npm run test:e2e",
 		"db:push": "drizzle-kit push",
+		"db:seed": "node scripts/seed.mjs",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate",
 		"db:studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.2.1",
 		"@cloudflare/workers-types": "^4.20260109.0",
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.39.1",
@@ -66,6 +68,8 @@
 		"drizzle-orm": "^0.45.1",
 		"firebase": "^12.7.0",
 		"firebase-admin": "^13.6.0",
+		"jspdf": "^4.0.0",
+		"jspdf-autotable": "^5.0.7",
 		"lucia": "^3.2.2",
 		"lucide-svelte": "^0.562.0",
 		"svelte-dnd-action": "^0.9.69",
