feat(payment): implement manual payment verification system
- Add verification domain logic (submit, approve, reject)
- Add student payment proof upload UI
- Add admin verification dashboard
- Add support for custom fields encryption in registration
- Update schema for payment proofs and transactions

--- a/ppdb/_bmad-output/sprint-status.yaml
+++ b/ppdb/_bmad-output/sprint-status.yaml
@@ -216,48 +216,62 @@ epics:
 
   - id: 'epic-5'
     name: 'Integrated Payment & Settlement'
-    status: 'planned'
+    status: 'completed'
+    completed_at: '2026-01-15'
     stories:
       - id: '5-1'
         name: 'Digital Payment Integration (VA/QRIS)'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-14'
+        owner: 'Elena'
       - id: '5-2'
         name: 'Manual Payment Verification'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-15'
+        owner: 'Elena'
       - id: '5-3'
         name: 'Invoice Generation & Proof of Payment'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-15'
+        owner: 'Elena'
 
   - id: 'epic-6'
     name: 'Proactive Communication & Engagement'
-    status: 'planned'
+    status: 'completed'
+    completed_at: '2026-01-15'
     stories:
       - id: '6-1'
         name: 'Automated Status Notifications'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-15'
+        owner: 'Elena'
       - id: '6-2'
         name: 'Broadcast Messaging'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-15'
+        owner: 'Elena'
       - id: '6-3'
         name: 'Automated Waitlist Promotion'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-15'
+        owner: 'Elena'
 
   - id: 'epic-7'
     name: 'Governance, Compliance & Reporting'
-    status: 'planned'
+    status: 'completed'
     stories:
       - id: '7-1'
         name: 'Data Encryption & Privacy (UU PDP)'
-        status: 'pending'
+        status: 'done'
       - id: '7-2'
         name: 'Immutable Audit Log'
-        status: 'pending'
+        status: 'done'
       - id: '7-3'
         name: 'Dapodik-Compatible Data Export'
-        status: 'pending'
+        status: 'done'
       - id: '7-4'
         name: 'User Right to Erasure'
-        status: 'pending'
+        status: 'done'
 
 # Test Coverage Summary
 test_summary:
