chore: update project status and improve test mocking
- Update sprint-status.yaml to reflect completed Epics 4, 5, 6, 7
- Update setupTests.ts with more robust global DB mocks for unit testing
- Fix session.test.ts to work with new mock infrastructure

--- a/ppdb/_bmad-output/sprint-status.yaml
+++ b/ppdb/_bmad-output/sprint-status.yaml
@@ -193,9 +193,10 @@ epics:
 
   - id: 'epic-4'
     name: 'Verification, Selection & Ranking Engine'
-    status: 'in_progress'
+    status: 'completed'
     priority: 'high'
     planned_start: '2026-01-12'
+    completed_at: '2026-01-16'
     stories:
       - id: '4-1'
         name: 'Side-by-Side Verification Interface'
@@ -209,10 +210,14 @@ epics:
         owner: 'Elena'
       - id: '4-3'
         name: 'Automated Ranking Engine'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-16'
+        owner: 'Elena'
       - id: '4-4'
         name: 'Home Visit Report Upload'
-        status: 'pending'
+        status: 'done'
+        completed_at: '2026-01-16'
+        owner: 'Elena'
 
   - id: 'epic-5'
     name: 'Integrated Payment & Settlement'
