--- a/ppdb/package.json
+++ b/ppdb/package.json
@@ -40,6 +40,7 @@
 		"@types/jsdom": "^27",
 		"@types/node": "^24",
 		"@types/pg": "^8.16.0",
+		"@types/ws": "^8.18.1",
 		"autoprefixer": "^10.4.23",
 		"bits-ui": "^1.4.7",
 		"clsx": "^2.1.1",
@@ -76,6 +77,7 @@
 		"lucia": "^3.2.2",
 		"lucide-svelte": "^0.562.0",
 		"next-themes": "^0.4.6",
+		"postgres": "^3.4.8",
 		"sonner": "^2.0.7",
 		"svelte-dnd-action": "^0.9.69",
 		"svelte-sonner": "^1.0.7",
