chore(saas): add seed script for default packages

--- a/ppdb/package.json
+++ b/ppdb/package.json
@@ -18,6 +18,7 @@
 		"test": "npm run test:unit && npm run test:e2e",
 		"db:push": "drizzle-kit push",
 		"db:seed": "node scripts/seed.mjs",
+		"db:seed:saas": "npx tsx src/lib/server/db/seed-saas.ts",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate",
 		"db:studio": "drizzle-kit studio"
@@ -68,6 +69,7 @@
 		"@lucia-auth/adapter-drizzle": "^1.1.0",
 		"@neondatabase/serverless": "^1.0.2",
 		"canvas-confetti": "^1.9.4",
+		"date-fns": "^4.1.0",
 		"dompurify": "^3.3.1",
 		"drizzle-orm": "^0.45.1",
 		"firebase": "^12.7.0",
