--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ dist/
 .DS_Store
 *.log
 ai-skills/
+
+# Auto Claude generated files
+.auto-claude/
+.auto-claude-security.json
+.auto-claude-status
+.claude_settings.json
+.worktrees/
+.security-key
+logs/security/
