--- a/ppdb/package.json
+++ b/ppdb/package.json
@@ -68,6 +68,7 @@
 	"dependencies": {
 		"@lucia-auth/adapter-drizzle": "^1.1.0",
 		"@neondatabase/serverless": "^1.0.2",
+		"@types/xlsx": "^0.0.35",
 		"canvas-confetti": "^1.9.4",
 		"date-fns": "^4.1.0",
 		"dompurify": "^3.3.1",
@@ -78,11 +79,13 @@
 		"jspdf-autotable": "^5.0.7",
 		"lucia": "^3.2.2",
 		"lucide-svelte": "^0.562.0",
+		"nanoid": "^5.1.6",
 		"next-themes": "^0.4.6",
 		"postgres": "^3.4.8",
 		"sonner": "^2.0.7",
 		"svelte-dnd-action": "^0.9.69",
 		"svelte-sonner": "^1.0.7",
+		"xlsx": "^0.18.5",
 		"zod": "^4.3.5"
 	}
 }
