chore: add auto-claude entries to .gitignore

--- a/ppdb/.gitignore
+++ b/ppdb/.gitignore
@@ -30,3 +30,11 @@ vite.config.ts.timestamp-*
 # Database
 *.db
 *.sqlite
+
+# Auto Claude generated files
+.auto-claude/
+.auto-claude-security.json
+.auto-claude-status
+.claude_settings.json
+.security-key
+logs/security/
