--- a/ppdb/package.json
+++ b/ppdb/package.json
@@ -45,6 +45,7 @@
 		"autoprefixer": "^10.4.19",
 		"bits-ui": "^1.4.7",
 		"clsx": "^2.1.1",
+		"dotenv": "^17.2.3",
 		"drizzle-kit": "^0.31.8",
 		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
